--- a/views/admin/admin-doctor-details.ejs
+++ b/views/admin/admin-doctor-details.ejs
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #e6ecfe;">
-        <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth | Admin</a>
+        <div class="container-fluid"><a class="navbar-brand" href="/admin">teleHealth | Admin</a>
             <ul class="nav navbar-nav">
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"></li>
             </ul><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin-panel.html">Home</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin">Home</a></li>
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="/login.html">Logout</a></li>
             </ul>
