--- a/views/admin/admin-doctors.ejs
+++ b/views/admin/admin-doctors.ejs
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #e6ecfe;">
-        <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth | Admin</a>
+        <div class="container-fluid"><a class="navbar-brand" href="/admin">teleHealth | Admin</a>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin-panel.html">Home</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin">Home</a></li>
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="/login.html">Logout</a></li>
             </ul><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
@@ -24,7 +23,7 @@
                 <div class="col">
                     <h1>Doctors</h1>
                 </div>
-                <div class="col"><a id="create-doctor-link" href="/admin-create-doctor.html">Create Doctor</a></div>
+                <div class="col"><a id="create-doctor-link" href="/admin/admin-create-doctor" class="btn btn-primary">Create Doctor</a></div>
             </div>
         </div>
     </div>
@@ -34,21 +33,21 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Dr Zuri</h4>
-                        <h6 class="text-muted card-subtitle mb-2">Nairobi</h6><a class="card-link" href="/admin-doctor-details.html">View</a><a class="card-link" href="#">Delete</a></div>
+                        <h6 class="text-muted card-subtitle mb-2">Nairobi</h6><a class="card-link" href="/admin/admin-doctor-details/123">View</a><a class="card-link" href="#">Delete</a></div>
                 </div>
             </div>
             <div class="container">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Dr Jonny Govish</h4>
-                        <h6 class="text-muted card-subtitle mb-2">Mombasa</h6><a class="card-link" href="#">View</a><a class="card-link" href="#">Delete</a></div>
+                        <h6 class="text-muted card-subtitle mb-2">Mombasa</h6><a class="card-link" href="/admin/admin-doctor-details/123">View</a><a class="card-link" href="#">Delete</a></div>
                 </div>
             </div>
             <div class="container">
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title">Dr Sunshine&nbsp;</h4>
-                        <h6 class="text-muted card-subtitle mb-2">Space</h6><a class="card-link" href="#">View</a><a class="card-link" href="#">Remove</a></div>
+                        <h6 class="text-muted card-subtitle mb-2">Space</h6><a class="card-link" href="/admin/admin-doctor-details/123">View</a><a class="card-link" href="#">Delete</a></div>
                 </div>
             </div>
         </div>
