--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
-
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color: #e6ecfe;">
-        <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth | Admin</a>
+        <div class="container-fluid"><a class="navbar-brand" href="/admin">teleHealth | Admin</a>
             <ul class="nav navbar-nav">
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"></li>
             </ul><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin-panel.html">Home</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin">Home</a></li>
                 <li class="nav-item" role="presentation"></li>
-                <li class="nav-item" role="presentation"><a class="nav-link" href="/login.html">Logout</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link" href="/auth/logout">Logout</a></li>
             </ul>
         </div>
     </nav>
     <div class="row">
         <div class="col">
             <div class="container">
-                <h1>Create Doctor</h1>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <form><label>Names</label><input class="form-control" type="text" id="doctor-names" name="doctor-names"><label>Hospital</label><input class="form-control" type="text" id="doctor-hospital" name="doctor-hospital"><label>License Number</label>
-                    <input
-                        class="form-control" type="text" id="doctor-license-number" name="doctor-license-number"><label>Specialty</label><input class="form-control" type="text" id="doctor-specialty" name="doctor-specialty">
-                        <hr><button class="btn btn-primary" type="button">SAVE DETAILS</button></form>
+                <div class="card-group">
+                    <div class="card" style="margin-right: 2.5%;"><img class="card-img-top w-100 d-block">
+                        <div class="card-body">
+                            <h4 class="card-title">Doctors</h4>
+                            <p class="card-text">All the doctors in the system</p><a class="card-link" href="/admin/admin-doctors">View</a>
+                        </div>
+                    </div>
+                    <div class="card"><img class="card-img-top w-100 d-block">
+                        <div class="card-body">
+                            <h4 class="card-title">Patients</h4>
+                            <p class="card-text">All the patients in the system</p><a class="card-link" href="/admin/admin-patients">View</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
