--- a/views/doctor/doctor-consultations.ejs
+++ b/views/doctor/doctor-consultations.ejs
@@ -28,7 +28,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Patient 1</h4>
                             <h6 class="text-muted card-subtitle mb-2">Migraine</h6>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Details</a></div>
+                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultation">Details</a></div>
                     </div>
                 </div>
                 <div class="col">
@@ -36,7 +36,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Patient 2</h4>
                             <h6 class="text-muted card-subtitle mb-2">Persistent body Ache</h6>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Details</a></div>
+                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultations">Details</a></div>
                     </div>
                 </div>
             </div>
