--- a/views/doctor/doctor-consultations.ejs
+++ b/views/doctor/doctor-consultations.ejs
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Consultations</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Consultations</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
             </ul>
@@ -36,7 +36,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Patient 2</h4>
                             <h6 class="text-muted card-subtitle mb-2">Persistent body Ache</h6>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultations">Details</a></div>
+                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultation">Details</a></div>
                     </div>
                 </div>
             </div>
