--- a/views/doctor/doctor-view-consultation.ejs
+++ b/views/doctor/doctor-view-consultation.ejs
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="#/doctor/doctor-consultations">Consultations</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Consultations</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
             </ul>
