feature(Add View Doctors Page): Viewing Doctor Details

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,7 +23,7 @@ label:focus,
   box-shadow: none !important;
 }
 
-input,.btn{
+input, .btn, .card{
 	border-radius:0px !important;
 }
 
@@ -33,4 +33,20 @@ input{
 
 .navbar-expand-md{
 	background-color: #e6ecfe !important;
+}
+
+.card-subtitle{
+	margin-top: 1.2%;
+}
+
+.errors-container{
+	padding: 2% 2% 2% 2%;
+	background-color: #FA8072;
+	color:#fff;
+	border:1px solid #FA8072;
+	box-shadow:0px 2px 3px #FA8072;
+}
+
+.error,.errors-list li{
+	font-size:11px !important;
 }
