--- a/views/admin/admin-panel.ejs
+++ b/views/admin/admin-panel.ejs
@@ -27,13 +27,13 @@
         <div class="col">
             <div class="container">
                 <div class="card-group">
-                    <div class="card" style="margin-right: 2.5%;"><img class="card-img-top w-100 d-block">
+                    <div class="card" style="margin-right: 2.5%;">
                         <div class="card-body">
                             <h4 class="card-title">Doctors</h4>
                             <p class="card-text">All the doctors in the system</p><a class="card-link" href="/admin/admin-doctors">View</a>
                         </div>
                     </div>
-                    <div class="card"><img class="card-img-top w-100 d-block">
+                    <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Patients</h4>
                             <p class="card-text">All the patients in the system</p><a class="card-link" href="/admin/admin-patients">View</a>
