--- a/views/admin/admin-doctors.ejs
+++ b/views/admin/admin-doctors.ejs
@@ -15,11 +15,20 @@
                 <li class="nav-item" role="presentation"><a class="nav-link active" href="/admin">Home</a></li>
                 <li class="nav-item" role="presentation"></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="/login.html">Logout</a></li>
-            </ul><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
+            </ul><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        </div>
     </nav>
     <div>
         <div class="container">
             <div class="row">
+                <% if(messages.success){ %>
+                <div class="col-md-12 col-lg-12 col-sm-12">
+                    <div class="alert alert-success alert-dismissible">
+                      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                      <strong>Success!</strong> <%= messages.success %>
+                    </div>
+                </div>
+                <% } %>
                 <div class="col">
                  <h1>Doctors</h1>
                 </div>
@@ -27,25 +36,25 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <% doctors.forEach(function(doctor){ %>
-            <div class="container">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title">Dr. <%= doctor.names%></h4>
-                        <h6 class="text-muted card-subtitle mb-2"><%= doctor.license_number%></h6>
-                        <h6 class="text-muted card-subtitle mb-2"><%= doctor.speciality%></h6>
-                        <h6 class="text-muted card-subtitle mb-2"><%= doctor.hospital%></h6>
-                        <a class="card-link" href="/admin/admin-doctor-details/<%=doctor._id%>">View</a>
-                        <a class="card-link" href="#">Delete</a>
-                    </div>
+    <div class="row" style="padding:2.5% 5% 2.5% 5%;">
+    <% doctors.forEach(function(doctor){ %>
+    <div class="col-md-4 col-lg-4 col-sm-12">
+        <div class="container">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Dr. <%= doctor.names%></h4>
+                    <h6 class="text-muted card-subtitle mb-2"><%= doctor.license_number%></h6>
+                    <h6 class="text-muted card-subtitle mb-2"><%= doctor.speciality%></h6>
+                    <h6 class="text-muted card-subtitle mb-2"><%= doctor.hospital%></h6>
+                    <a class="btn btn-info btn-sm" href="/admin/admin-doctor-details/<%=doctor._id%>">View</a>
                 </div>
             </div>
-            <% }); %> 
         </div>
     </div>
+    <% }); %> 
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 </body>
 
