ft:integrate doctor consultation

--- a/views/doctor/doctor-profile.ejs
+++ b/views/doctor/doctor-profile.ejs
@@ -27,11 +27,12 @@
         </div>
         <div class="row" style="padding:0;padding-bottom:10px;padding-top:20px;">
             <div class="col-md-6">
-                <p class="text-nowrap text-right">Patients</p>
+                <p class="text-nowrap text-right"><a href="/doctor/doctor-consultation">Patients</a></p>
                 <p class="text-right"><strong>12M</strong> </p>
             </div>
             <div class="col-md-6">
-                <p class="text-left">Consultations</p>
+                <p class="text-left"><a href="/doctor/doctor-view-consultation">Consultations</a></p>
+                
                 <p class="text-left"><strong>1M</strong> </p>
             </div>
         </div>
