--- a/views/doctor/doctor-consultations.ejs
+++ b/views/doctor/doctor-consultations.ejs
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="/doctor/doctor-consultation">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
                 <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Consultations</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
@@ -21,24 +21,26 @@
     </nav>
     <div class="row">
         <div class="col">
-            <h1>Your Consulatations:</h1>
+            <h1>Patients:</h1>
             <div class="row">
                 <div class="col">
+                    <% patients.forEach(function(patient){ %>
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Patient 1</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Migraine</h6>
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultation">Details</a></div>
+                            <h4 class="card-title"><%= patient.name %></h4>
+                            <h6 class="text-muted card-subtitle mb-2"><%= patient.age %></h6>
+                            <p class="card-text"><%= patient.symptoms %></p><a class="card-link" href="/doctor/doctor-view-consultation">Details</a></div>
                     </div>
+                    <% }); %>
                 </div>
-                <div class="col">
+               <!--  <div class="col">
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Patient 2</h4>
                             <h6 class="text-muted card-subtitle mb-2">Persistent body Ache</h6>
                             <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="/doctor/doctor-view-consultation">Details</a></div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
