modification: replaced license and specialty fields replaced with gender and DOB fields

--- a/views/patient/patient-register.ejs
+++ b/views/patient/patient-register.ejs
@@ -36,12 +36,12 @@
                 <form action="/patient/patient-post-register" method="POST">
                     <label>Names</label>
                     <input class="form-control" type="text" id="patient-name" name="names">
-                    <label>License Number</label>
-                    <input class="form-control" type="text" id="patient-license-number" name="license_number">
+                    <label>Date Of Birth:</label>
+                    <input class="form-control" type="text" id="patient-license-number" name="dob">
                     <label>Hospital</label>
                     <input class="form-control" type="text" id="patient-hospital" name="hospital">
-                    <label>Speciality</label>
-                    <input class="form-control" type="text" id="patient-speciality" name="speciality">
+                    <label>Gender (male/female)</label>
+                    <input class="form-control" type="text" id="patient-speciality" name="gender">
                     <label>Email Address</label>
                     <input class="form-control" type="email" id="patient-email" name="email">
                     <label>Password</label>
