--- a/views/doctor/doctor-consultations.ejs
+++ b/views/doctor/doctor-consultations.ejs
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><a class="navbar-brand" href="/doctor/doctor-consultation">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Consultations</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Home</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
             </ul>
