--- a/views/doctor/doctor-profile.ejs
+++ b/views/doctor/doctor-profile.ejs
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Consultations</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor">Home</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
             </ul>
@@ -21,19 +23,19 @@
     </nav>
     <div class="text-center profile-card" style="margin:15px;background-color:#ffffff;">
         <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
-        <div><img class="rounded-circle" style="margin-top:-70px;" src="/assets/img/avatar-dhg.png" height="150px">
+        <div><img class="rounded-circle" style="margin-top:-70px;" src="/img/avatar-dhg.png" height="150px">
             <h3>Joseph Mancuso</h3>
-            <p style="padding:20px;padding-bottom:0;padding-top:5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dapibus felis et libero scelerisque.</p>
+            <p style="padding:20px;padding-bottom:0;padding-top:5px;">Welcome Dr Zuri</p>
         </div>
         <div class="row" style="padding:0;padding-bottom:10px;padding-top:20px;">
             <div class="col-md-6">
                 <p class="text-nowrap text-right"><a href="/doctor/doctor-consultation">Patients</a></p>
-                <p class="text-right"><strong>12M</strong> </p>
+                <!--<p class="text-right"><strong>12M</strong> </p> -->
             </div>
             <div class="col-md-6">
                 <p class="text-left"><a href="/doctor/doctor-view-consultation">Consultations</a></p>
                 
-                <p class="text-left"><strong>1M</strong> </p>
+                <!-- <p class="text-left"><strong>1M</strong> </p> -->
             </div>
         </div>
     </div>
