--- a/views/doctor/doctor-view-consultation.ejs
+++ b/views/doctor/doctor-view-consultation.ejs
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>teleHealth</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md">
         <div class="container-fluid"><a class="navbar-brand" href="#">teleHealth</a><button class="navbar-toggler" data-toggle="collapse"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <ul class="nav navbar-nav">
-                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Consultations</a></li>
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="/doctor/">Home</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dr Zuri,</a></li>
                 <li class="nav-item" role="presentation"><a class="nav-link" href="#">Logout</a></li>
             </ul>
         </div>
     </nav>
+    <% consultations.forEach(function(consultation){ %>
     <div class="row">
         <div class="col">
             <h1>Consultation Details:</h1>
@@ -26,10 +29,10 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="media"><img class="mr-3" src="/assets/img/avatar-dhg.png">
+            <div class="media"><img class="mr-3" src="/img/avatar-dhg.png">
                 <div class="media-body">
-                    <h5>Patient Name</h5>
-                    <p>Detail description of the issue</p>
+                    <h5>Patient Number:<%= consultations.patient_number %></h5>
+                    <p>Detail description of the issue<br><%= consultations.visitation_notes %></p>
                 </div>
                 <div class="card"></div>
             </div>
@@ -38,11 +41,13 @@
     <div class="col">
         <div class="card">
             <div class="card-body">
-                <h4 class="card-title">Attachments</h4>
-                <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">View</a></div>
+                <h4 class="card-title">Attachments:<%= consultations.attachments_path %> </h4>
+                <!--<h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
+                <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">View</a> -->
+            </div>
         </div>
     </div>
+    <% }); %>
     <div class="row">
         <div class="col">
             <div role="tablist" id="accordion-1">
@@ -51,26 +56,28 @@
                         <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="true" aria-controls="accordion-1 .item-1" href="#accordion-1 .item-1">PROGNOSIS</a></h5>
                     </div>
                     <div class="collapse show item-1" role="tabpanel" data-parent="#accordion-1">
-                        <div class="card-body"><button class="btn btn-primary" type="button">Add Prognosis</button></div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-header" role="tab">
-                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="#accordion-1 .item-2">DIAGNOSIS</a></h5>
-                    </div>
-                    <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
                         <div class="card-body">
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <button class="btn btn-primary" type="button">Add Prognosis</button>
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-header" role="tab">
-                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="#accordion-1 .item-3">PRESCRIPTION</a></h5>
+                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-2" href="#accordion-1 .item-2">Diagnosis</a></h5>
+                    </div>
+                    <div class="collapse item-2" role="tabpanel" data-parent="#accordion-1">
+                        <div class="card-body">
+                            <p>Nullam id dolor id nibh ultricies</p>
+                       </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" role="tab">
+                        <h5 class="mb-0"><a data-toggle="collapse" aria-expanded="false" aria-controls="accordion-1 .item-3" href="#accordion-1 .item-3">Prescription</a></h5>
                     </div>
                     <div class="collapse item-3" role="tabpanel" data-parent="#accordion-1">
                         <div class="card-body">
-                            <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+                            <p class="card-text">Nullam id dolor id nibh ultricies</p>
                         </div>
                     </div>
                 </div>
