--- a/views/doctor/doctor-profile.ejs
+++ b/views/doctor/doctor-profile.ejs
@@ -23,7 +23,7 @@
     </nav>
     <div class="text-center profile-card" style="margin:15px;background-color:#ffffff;">
         <div class="profile-card-img" style="background-image:url(&quot;iceland.jpg&quot;);height:150px;background-size:cover;"></div>
-        <div><img class="rounded-circle" style="margin-top:-70px;" src="/img/avatar-dhg.png" height="150px">
+        <div><img class="rounded-circle" style="margin-top:-70px;" src="/img/patient.png" height="150px">
             <h3>Joseph Mancuso</h3>
             <p style="padding:20px;padding-bottom:0;padding-top:5px;">Welcome Dr Zuri</p>
         </div>
